Fix spacing between h1 and content container

--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,19 @@
+
 body {
     background-color: #181818;
     font-family: "Roboto";
     color: #B3B3B3;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 h1 {
     font-size: 96px;
     font-weight: 300;
     text-align: center;
-    /* margin-bottom: -240px; */
+    margin: 20px 0 75px 0;
 }
 
 .grid-item {
@@ -37,9 +42,10 @@ h1 {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 50vh;
     width: 100vw;
     gap: 67px;
+    margin: 20px 0 20px 0;
 }
 
 .controls-container {
@@ -122,6 +128,8 @@ footer {
     justify-content: center;
     align-items: center;
     font-size: 20px;
+    position: fixed;
+    bottom: 0;
 }
 
 .fa-brands.fa-github {
